[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laonlp"
version = "0.1.0"
description = "Open Lao Language AI - Core NLP tools for Lao language"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["nlp", "lao", "language", "segmentation", "pos-tagging", "spell-checker"]
requires-python = ">=3.11"

dependencies = [
    # Core
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "tokenizers>=0.13.0",
    
    # NLP
    "sentencepiece>=0.1.99",
    "sacrebleu>=2.3.0",
    "nltk>=3.8",
    "langdetect>=1.0.9",
    
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "datasketch>=1.6.0",
    
    # Web scraping
    "requests>=2.31.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",
    "newspaper3k>=0.2.8",
    "trafilatura>=1.6.0",
    "scrapy>=2.9.0",
    
    # Text processing
    "ftfy>=6.1.0",
    "regex>=2023.0.0",
    "unicodedata2>=15.0.0",
    
    # Utils
    "tqdm>=4.65.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.0.270",
    "black>=23.3.0",
    "mypy>=1.3.0",
    "pre-commit>=3.3.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "redis>=4.5.0",
    "rq>=1.15.0",
    "slowapi>=0.1.8",
]
training = [
    "wandb>=0.15.0",
    "accelerate>=0.20.0",
    "peft>=0.4.0",
    "bitsandbytes>=0.39.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/laonlp"
Documentation = "https://laonlp.readthedocs.io"
Repository = "https://github.com/yourusername/laonlp"
"Bug Tracker" = "https://github.com/yourusername/laonlp/issues"

[project.scripts]
laonlp = "laonlp.cli:main"

[tool.setuptools.packages.find]
where = ["packages"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true